core/tests/ui/store/pagin_field_duplicate_rejected.stderr
error: Store supports at most one #[pagin] field
  --> tests/ui/store/pagin_field_duplicate_rejected.rs:11:5
   |
11 |     updated_at: i64,
   |     ^^^^^^^^^^
